--- a/config/corne.conf
+++ b/config/corne.conf
@@ -10,3 +10,15 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 
 # Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
 # CONFIG_ZMK_USB_LOGGING=y
+
+# Uncomment to enable encoder
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+#left_encoder: encoder_left {
+#        compatible = "alps,ec11";
+#        label = "LEFT_ENCODER";
+#        a-gpios = <&pro_micro 21 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+#        b-gpios = <&pro_micro 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+#        steps = <80>;
+#    };
