--- a/config/corne.conf
+++ b/config/corne.conf
@@ -15,10 +15,10 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-#left_encoder: encoder_left {
-#        compatible = "alps,ec11";
-#        label = "LEFT_ENCODER";
-#        a-gpios = <&pro_micro 21 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-#        b-gpios = <&pro_micro 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-#        steps = <80>;
-#    };
+right_encoder: encoder_right {
+        compatible = "alps,ec11";
+        label = "RIGHT_ENCODER";
+        a-gpios = <&pro_micro 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        b-gpios = <&pro_micro 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        steps = <80>;
+    };
