--- a/config/boards/shields/corne/corne.dtsi
+++ b/config/boards/shields/corne/corne.dtsi
@@ -73,7 +73,7 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
         a-gpios = <&pro_micro 10 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         b-gpios = <&pro_micro 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         steps = <20>;
-        status = "disabled";
+        status = "okay";
     };
  sensors: sensors {
         compatible = "zmk,keymap-sensors";
