--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -8,4 +8,4 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 # Set left to central side, right to periphery side
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
-CONFIG_ZMK_SPLIT_BLE
+CONFIG_ZMK_SPLIT_BLE=y
