--- a/config/corne.conf
+++ b/config/corne.conf
@@ -16,3 +16,4 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 # Uncomment to enable encoder
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
